// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if commit message is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the commit message is longer than 72 chars 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if commit message is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the commit message is longer than 72 chars 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if commit message is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the commit message is longer than 72 chars 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if commit message is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the commit message is longer than 72 chars 1`] = `
"Hi @user-a!, thanks for the Pull Request

The first commit message isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean \\"docs\\", \\"fix\\", or \\"feat\\"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The pull request title isn't properly formatted. We ask that you update the message to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;
